# python-lua-tables

./: .gitignore  LICENCE  README.md  setup.cfg  table.py
src/luatable/: __init__.py  table.py
src/table/: __init__.py  table.py
