[metadata]
name = luatables
version = 1.0
author = Sky The Code Master
author_email = sky@skystuff.games
description = Lua tables in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SkyTheCodeMaster/python-lua-tables
project_urls =
    Bug Tracker = https://github.com/SkyTheCodeMaster/python-lua-tables/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
